test/errors.mlt
type t =
  { a : int [@sexp_drop_default] [@sexp.omit_nil] }
[@@deriving sexp_of]
[%%expect{|
Line _, characters 4-5:
Error: The following elements are mutually exclusive: sexp.sexp_drop_default sexp.omit_nil
|}]

type t =
  { a : int sexp_list [@sexp.omit_nil] }
[@@deriving sexp_of]
[%%expect{|
Line _, characters 4-5:
Error: The following elements are mutually exclusive: sexp.omit_nil sexp_list
|}]

type t =
  { a : int [@default 0] [@sexp.omit_nil] }
[@@deriving of_sexp]
[%%expect{|
Line _, characters 4-5:
Error: The following elements are mutually exclusive: sexp.default sexp.omit_nil
|}]
